--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "node-sass": "^4.14.1",
     "style-loader": "^1.2.1"
   }
